--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.110",
     "@types/jest": "^29.4.0",
     "@types/node": "18.11.18",
+    "@types/uuid": "^9.0.0",
+    "aws-cdk": "2.64.0",
+    "aws-sdk": "^2.1313.0",
     "jest": "^29.4.1",
     "ts-jest": "^29.0.5",
-    "aws-cdk": "2.64.0",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   },
